2009-03-04  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: use ncurses if found instead of ncuses, fixes bug #574021
	* tools/tools-input.c: currected compilation issue if readline is not found,
	fixes bug #574020

2009-03-03  Vivien Malerba <malerba@gnome-db.org>

	* configure.in:
	* libgda/Makefile.am:
	* libgda/gda-data-model-bdb.c:
	* providers/bdb/Makefile.am: the berkeley db livrary is now loaded only
	when needed: the libgda library is not linked directly with it anymore

2009-03-02  Vivien Malerba <malerba@gnome-db.org>

	* tools/gda-sql.c:
	  - corrected the "\i" command
	  - corrected multi line commands handling
	* tools/gda-threader.c: removed unnecessary warning
	* tests/parser: added a new test which checks the parsing of whole script files
	* libgda/sql-parser/gda-sql-parser.c: consider a single '#' to be the start of a comment
	up to the end of the line for MySQL
	* libgda/libgda.symbols: added missing symbols (gda_data_model_error_get_type and
	gda_utility_data_model_find_column_description), and other corrections
	* libgda/sqlite/: renamed symbols which are not supposed to be exported

2009-02-28  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 3.99.13

Released 3.99.12

2009-02-26  Vivien Malerba <malerba@gnome-db.org>

	* libgda/libgda.symbols:
	* libgda/gda-row.[ch]: added gda_row_invalidate_value() and gda_row_value_is_valid()
	to be used by database providers' implementations to tag individual values in a GdaRow
	as invalid (either because the value coud not be read or because the value could not
	be intepreted as the requested data type)
	* libgda/sqlite: SQLite provider's improvements:
	  - handle int64 types
	  - fixed a bug when using the '*' in a SELECT to get a blob data
	  - use the new gda_row_invalidate_value() API
	* libgda/gda-data-access-wrapper.c:
	* libgda/gda-data-model-array.c:
	* providers/mysql/gda-mysql-recordset.c: