@@ -1,5 +1,7 @@
 noinst_LTLIBRARIES = libgda-test-4.0.la
-noinst_PROGRAMS = test-ddl-creator
+TESTS = test-ddl-creator test-bin-converter
+check_PROGRAMS = test-ddl-creator test-bin-converter
+
 
 SUBDIRS = providers parser value-holders meta-store data-models multi-threading
 
@@ -7,7 +9,9 @@ AM_CPPFLAGS = \
         -I$(top_builddir) \
         -I$(top_srcdir) \
         -I$(top_srcdir)/libgda \
-        $(LIBGDA_CFLAGS)
+        $(LIBGDA_CFLAGS) \
+	-DCHECK_FILES=\""$(top_srcdir)"\" \
+	-DTOP_BUILD_DIR=\""$(top_builddir)"\"
 
 test_headers = \
         gda-ddl-creator.h
@@ -19,6 +23,7 @@ libgda_test_4_0_la_SOURCES = \
 	test-cnc-utils.c
 
 libgda_test_4_0_la_LDFLAGS = -version-info $(GDA_CURRENT):$(GDA_REVISION):$(GDA_AGE) $(NO_UNDEFINED)
+
 libgda_test_4_0_la_LIBADD = \
 	$(LIBGDA_LIBS) \
 	$(top_builddir)/libgda/libgda-4.0.la 
@@ -30,3 +35,14 @@ test_ddl_creator_LDADD = \
         $(top_builddir)/libgda/libgda-4.0.la \
 	libgda-test-4.0.la \
         $(LIBGDA_LIBS)
+
+
+test_bin_converter_SOURCES = \
+        test-bin-converter.c
+
+test_bin_converter_LDADD = \
+        $(top_builddir)/libgda/libgda-4.0.la \
+	libgda-test-4.0.la \
+        $(LIBGDA_LIBS)
+
+EXTRA_DIST = dbstruct.xml
